--- a/ShoppingWebsiteMvc/appsettings.json
+++ b/ShoppingWebsiteMvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ShoppingWebsiteMvc-5ea39e8e-dcfd-477a-b10e-d41ceccecba7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MainConnStr": "Server=.\\SQLEXPRESS;Database=ShoppingWebsite;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
